--- a/halo2_proofs/Cargo.toml
+++ b/halo2_proofs/Cargo.toml
@@ -52,7 +52,7 @@ backtrace = { version = "0.3", optional = true }
 rayon = "1.5.1"
 ff = "0.13"
 group = "0.13"
-halo2curves = { git = "https://github.com/davidnevadoc/halo2curves", rev = "cc00efc" }
+halo2curves = { git = "https://github.com/iquerejeta/halo2curves", rev = "abf060"}
 rand_core = { version = "0.6", default-features = false }
 tracing = "0.1"
 blake2b_simd = "1"
